fixing spacing

--- a/style.css
+++ b/style.css
@@ -107,6 +107,12 @@ body {
   gap: 12px;
 }
 
+@media (max-width: 1024px) {
+  .header {
+    padding: 45px 0;
+  }
+}
+
 @media (max-width: 620px) {
   .header {
     padding: 34px 0;
@@ -234,7 +240,7 @@ body {
 @media (min-width: 768px) {
   .cards-list {
     grid-template-columns: repeat(2, 1fr);
-    gap: 24px;
+    gap: 18px;
   }
 }
 
